--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,6 +16,13 @@
 
 .content {
 
+  &__top {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 100%;
+  }
+
   &__title {
     text-align: center;
     margin: 2rem 0 1rem;
@@ -32,10 +39,12 @@
     justify-content: center;
   }
 
-  &__top {
+  &__button {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    max-width: 100%;
+    justify-content: center;
+    width: 100%;
+    margin: 1rem 0 0;
   }
+
+
 }
