--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,7 +3,6 @@
 .button {
   cursor: pointer;
 
-
   &--search {
     position: absolute;
     top: 0;
@@ -20,4 +19,29 @@
 
   }
 
+  &--add {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 176px;
+    height: 70px;
+    background-color: $black;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-bottom: 3rem;
+    text-align: center;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    border: 1px solid transparent;
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.4);
+
+    h2 {
+      color: $white;
+    }
+
+    &:hover {
+      background-color: rgba($black, .9);
+      box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6) inset;
+    }
+  }
 }
