--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -89,12 +89,13 @@
 
 
     &--item {
+      //width: 50px;
       display: flex;
       text-align: center;
       justify-content: center;
       align-items: center;
       flex-direction: column;
-      margin-left: 1rem;
+      margin-left: 2rem;
       cursor: pointer;
 
       p {
@@ -156,7 +157,7 @@
         margin-left: 0;
 
         &:not(:nth-of-type(1)) {
-          margin-left: 1rem;
+          margin-left: 1.5rem;
         }
       }
     }
