redux was improved, a separate page for the book was added, some layout fixes were added - navigation was removed

--- a/src/scss/components/_sort-nav.scss
+++ b/src/scss/components/_sort-nav.scss
@@ -39,7 +39,7 @@
 
     span {
       color: rgba($white, .7);
-      border-bottom: 1px dashed $white;
+      border-bottom: 1px dashed rgba($white, .7);
       cursor: pointer;
     }
   }
