--- a/src/scss/components/_book-item.scss
+++ b/src/scss/components/_book-item.scss
@@ -1,67 +1,178 @@
-.book {
-  display: flex;
-  justify-content: center;
-  width: 280px;
+@import "../variables";
 
-  margin: 1rem 1rem 3rem;
+.bk {
 
+ padding-top: 3rem;
   &__inner {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    flex-wrap: wrap;
 
   }
 
-  &__category {
-    min-height: 19px;
-    text-align: center;
-    margin: 1.5rem 0 .5rem;
-
-    p {
-      color: gray;
-
-    }
-
-  }
-
-  &__title {
-    text-align: center;
-    font-size: 1.3rem;
-    cursor: pointer;
+  &__data {
+    width: 60%;
+    flex-grow: 1;
+    padding: 0 2rem;
   }
 
   &__img {
-    width: 200px;
-    height: 300px;
-    cursor: pointer;
+    width:400px;
+
+    &--container {
+      width: 350px;
+      height: 500px;
+      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.35);
 
 
-    img {
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+      }
+    }
+  }
+
+  &__category {
+
+    h2 {
+      color: $subtitleColor;
+
+    }
+  }
+
+  &__title {
+    margin: 2.5rem 0 .5rem;
+    h1 {
+
+    }
+  }
+
+  &__authors {
+
+    h2 {
+      font-size: 1.5rem;
+      color: $subtitleColor;
+    }
+  }
+
+  &__description {
+    margin: 1rem 0;
+
+    h3 {
+      margin: 0 0 .5rem;
+    }
+  }
+}
+
+@media (max-width: 1300px) {
+
+  .bk {
+
+    &__data {
       width: 100%;
-      height: 100%;
-      object-fit: fill;
-      box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
-      transition: all .2s linear;
+      margin-top: 2rem;
+      padding: 0;
+    }
 
-      &:hover {
-        transform: scale(1.01);
-        box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.4);
+    &__img {
+
+      &--container {
+        width: 350px;
+        height: 500px;
+
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+      }
+    }
+
+    &__category {
+      h2 {
+        color: $subtitleColor;
+
+      }
+    }
+
+    &__title {
+      h1 {
+
+      }
+    }
+
+    &__authors {
+
+      h2 {
+        color: $subtitleColor;
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+
+  .bk {
+
+    &__data {
+      width: 100%;
+      margin-top: 2rem;
+      padding: 0;
+    }
+
+    &__img {
+
+      &--container {
+        width: 250px;
+        height: 350px;
+
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+      }
+    }
+
+    &__category {
+      h2 {
+        font-size: 1.6rem;
+        color: $subtitleColor;
+
+      }
+    }
+
+    &__title {
+      margin: 1.3rem 0 .6rem;
+      h1 {
+        font-size: 2rem;
+
+      }
+    }
+
+    &__authors {
+
+      h2 {
+        font-size: 1.4rem;
+        color: $subtitleColor;
+      }
+    }
+
+
+    &__description {
+      margin: 1rem 0;
+
+      h3 {
+        font-size: 1rem;
+        margin: 0 0 .5rem;
       }
 
+      p {
+        font-size: .9rem;
+      }
     }
   }
-
-  &__author {
-    text-align: center;
-    margin: .3rem 0 0;
-
-    p {
-      color: gray;
-
-    }
-
-  }
-
 
 }
