the layout was completed, the typing was slightly changed, optimization to avoid unnecessary renders using a memo, a wrapper for the App component, a preloader for BookPage was added, a transition to the main page was added when the search button was pressed, and a ScrollToTop component was added to scroll up the page when listening to history

--- a/src/scss/components/_preloader.scss
+++ b/src/scss/components/_preloader.scss
@@ -8,7 +8,7 @@
   width: 80px;
   height: 80px;
 }
-.lds-ring div {
+.lds-ring .white {
   box-sizing: border-box;
   display: block;
   position: absolute;
@@ -19,6 +19,19 @@
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   border-color: $white transparent transparent transparent;
+}
+
+.lds-ring .black {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  margin: 8px;
+  border: 8px solid $black;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: $black transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
