--- a/src/scss/components/_book-item.scss
+++ b/src/scss/components/_book-item.scss
@@ -1,12 +1,11 @@
 @import "../variables";
 
 .bk {
-
  padding-top: 3rem;
+
   &__inner {
     display: flex;
     flex-wrap: wrap;
-
   }
 
   &__data {
@@ -23,7 +22,6 @@
       height: 500px;
       box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.35);
 
-
       img {
         width: 100%;
         height: 100%;
@@ -36,15 +34,11 @@
 
     h2 {
       color: $subtitleColor;
-
     }
   }
 
   &__title {
     margin: 2.5rem 0 .5rem;
-    h1 {
-
-    }
   }
 
   &__authors {
@@ -61,6 +55,15 @@
     h3 {
       margin: 0 0 .5rem;
     }
+  }
+
+
+  &__preloader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70vh;
   }
 }
 
@@ -92,13 +95,6 @@
     &__category {
       h2 {
         color: $subtitleColor;
-
-      }
-    }
-
-    &__title {
-      h1 {
-
       }
     }
 
@@ -114,33 +110,17 @@
 @media (max-width: 500px) {
 
   .bk {
-
-    &__data {
-      width: 100%;
-      margin-top: 2rem;
-      padding: 0;
-    }
-
     &__img {
-
       &--container {
         width: 250px;
         height: 350px;
-
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: fill;
-        }
       }
     }
 
     &__category {
       h2 {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         color: $subtitleColor;
-
       }
     }
 
@@ -148,18 +128,16 @@
       margin: 1.3rem 0 .6rem;
       h1 {
         font-size: 2rem;
-
       }
     }
 
     &__authors {
 
       h2 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         color: $subtitleColor;
       }
     }
-
 
     &__description {
       margin: 1rem 0;
@@ -174,5 +152,52 @@
       }
     }
   }
+}
 
+@media (max-width: 385px) {
+
+  .bk {
+    &__img {
+      &--container {
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+      }
+    }
+
+    &__category {
+
+      h2 {
+        font-size: 1.2rem;
+        color: $subtitleColor;
+
+      }
+    }
+
+    &__title {
+      margin: 1rem 0 .2rem;
+      h1 {
+        font-size: 1.5rem;
+
+      }
+    }
+
+    &__authors {
+
+      h2 {
+        font-size: 1.1rem;
+        color: $subtitleColor;
+      }
+    }
+
+    &__description {
+      margin: 1rem 0;
+
+      h3 {
+        margin: 0 0 .5rem;
+      }
+    }
+  }
 }
